# familiar

./: .clang-format  CMakeLists.txt  ChangeLog  Logger.h  README.md  appveyor.yml  borderdot.h  build.sh  canvasscene.h  mainselectedarea.h
.github/workflows/: Windows-pack.yml  build_cmake.yml  gh-release.yml
data/: familiar.rc
docs/: Doxyfile.in
familiar/: CMakeLists.txt  Vec2d.h  borderdot.cpp  canvasscene.cpp  canvasscene.h  canvasview.cpp  canvasview.h  debug_macros.h  image_downloader.cpp  itemgroup.cpp  itemgroup.h  mainselectedarea.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moveitem.cpp  moveitem.h
include/kColorPicker/: CMakeLists.txt
include/kColorPicker/src/: KColorPicker.cpp  PopupMenu.cpp  PopupMenu.h
include/kColorPicker/src/buttons/: AbstractPopupMenuButton.h  ColorDialogButton.cpp
include/kColorPicker/src/common/: ScaledSizeProvider.cpp
include/kColorPicker/tests/: CMakeLists.txt
misc/: LATEST_RELEASE_BODY
src/: CMakeLists.txt  CanvasArea.cpp  CanvasArea.h  ContentController.cpp  ContentController.h  Fleck.h  FocusPoints.cpp  FocusPoints.h  ImageWidget.cpp  ImageWidget.h  ImagesArea.cpp  ImagesArea.h  Logger.h  MessageBuilder.h  Point.h  README.dox  Rectangle.cpp  Rectangle.h  SysLogger.cpp  SysLogger.h  Vec2d.h  borderdot.cpp  borderdot.h  canvasscene.cpp  canvasscene.h  canvasview.cpp  canvasview.h  commands.cpp  commands.h  constants.h  debug_macros.h  file_actions.cpp  file_actions.h  fileio.cpp  fileio.h  fml_file_buffer.cpp  fml_file_buffer.h  image_downloader.cpp  image_downloader.h  itemgroup.cpp  (+28 more)
src/actions/: action_mixin.h  actions.cpp  actions.h  menu_structure.cpp  menu_structure.h
src/core/: controls.cpp  controls.h  qguiappcurrentscreen.cpp  qguiappcurrentscreen.h  settings.cpp  settings.h  settingshandler.cpp  settingshandler.h  valuehandler.cpp  valuehandler.h
src/deprecated/: itemgroup.h  mainselectedarea.cpp  mainselectedarea.h  movepixmapitem.cpp
src/ui/: colors_widget.cpp  colors_widget.h  mainmenubar.cpp  mainmenubar.h  mainwindow.glade  mainwindow.glade~  preferencesconf.cpp  preferencesconf.h  presetsave_window.cpp  presetsave_window.h  setshortcut_widget.cpp  setshortcut_widget.h  settings_window.cpp  settings_window.h  shortcuts_widget.cpp  shortcuts_widget.h
src/utils/: utils.cpp  utils.h
src/widgets/: color_gamut.cpp  color_gamut.h  dialogs.h  main_controls.h  recent_files_model.h  recent_files_view.h  settings_dialog.cpp  settings_dialog.h  welcome_overlay.cpp  welcome_overlay.h
src/widgets/controls/: controls_common.cpp  controls_common.h  keyboard_controls.cpp  keyboard_controls.h  mouse_controls.cpp  mouse_controls.h  mousewheel_controls.cpp  mousewheel_controls.h
